Mon Feb 21 18:31:12 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* signal.c: Standard signal handlers ignore signals on non-Ruby native
	  threads. When a handler is entried with ruby_signal() (like as the
	  standard signal handlers), the handler for the signal is marked as
	  it cannot accept non-Ruby native threads. If a handler can treat all
	  signals on all native threads, please use ruby_nativethread_signal()
	  to entry it. 

Sun Feb 20 00:48:48 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (URI::FTP#buffer_open): access mechanism
	  re-implemented according to RFC 1738.
	  reported by Guillaume Marcais.  [ruby-talk:131650]

Sat Feb 19 18:46:56 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (DRbObject#respond_to?): take two arguments.
	  [ruby-dev:25722]

	* test/drb/drbtest.rb: ditto.

Sat Feb 19 13:52:02 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb: call OpenSSL::SSL::SSLSocket#post_connection_check
	  after connection is made.

Sat Feb 19 13:31:28 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extract_makefile): remove no longer existing installed
	  files.

	* lib/mkmf.rb (install_dirs): return installation directory list.

	* lib/mkmf.rb (create_makefile): reverted wrongly removed lines.

Sat Feb 19 01:28:56 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/bigdecimal/lib/bigdecimal/newton.rb: resolve LoadError.
	  [ruby-dev:25685]

	* ext/bigdecimal/sample/linear.rb: ditto.

	* ext/bigdecimal/sample/nlsolve.rb: ditto.

	* ext/bigdecimal/lib/bigdecimal/nlsolve.rb: removed because this file
	  is sample script and same file exists in ext/bigdecimal/sample.

Thu Feb 17 22:15:34 2005  K.Kosako <sndgk@ybb.ne.jp>

	* ext/strscan/strscan.c: calls Oniguruma API directly.

Thu Feb 17 21:53:12 2005  K.Kosako <sndgk@ybb.ne.jp>

	* common.mk, LEGAL: remove reggnu.c.

Thu Feb 17 21:53:12 2005  Kazuo Saito <ksaito@uranus.dti.ne.jp>

	* gc.c, re.c: now ruby calls Oniguruma API directly, bypassing